--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -5,7 +5,8 @@
   volume={277},
   pages={571--590},
   year={1997},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  doi={10.1016/s0076-6879(97)77032-0}
 }
 
 @article{cock2009biopython,
@@ -16,7 +17,8 @@
   number={11},
   pages={1422--1423},
   year={2009},
-  publisher={Oxford University Press}
+  publisher={Oxford University Press},
+  doi={10.1093/bioinformatics/btp163}
 }
 
 @article{gligorijevic2021structure,
@@ -38,7 +40,8 @@
   number={W1},
   pages={W210--W215},
   year={2022},
-  publisher={Oxford University Press}
+  publisher={Oxford University Press},
+  doi={10.1093/nar/gkac387}
 }
 
 @article{huang2020faspr,
@@ -49,7 +52,8 @@
   number={12},
   pages={3758--3765},
   year={2020},
-  publisher={Oxford University Press}
+  publisher={Oxford University Press},
+  doi={10.1093/bioinformatics/btaa234}
 }
 
 @article{ireland2020atomium,
@@ -60,7 +64,8 @@
   number={9},
   pages={2750--2754},
   year={2020},
-  publisher={Oxford University Press}
+  publisher={Oxford University Press},
+  doi={10.1093/bioinformatics/btaa072}
 }
 
 @article{krivov2009improved,
@@ -92,7 +97,8 @@
   volume={11},
   number={9},
   pages={739--747},
-  year={1998}
+  year={1998},
+  doi={10.1093/protein/11.9.739}
 }
 
 @article{wojdyr2022gemmi,
@@ -102,7 +108,8 @@
   volume={7},
   number={73},
   pages={4200},
-  year={2022}
+  year={2022},
+  doi={10.21105/joss.04200}
 }
 
 @article{zhang2017cofactor,
@@ -113,7 +120,8 @@
   number={W1},
   pages={W291--W299},
   year={2017},
-  publisher={Oxford University Press}
+  publisher={Oxford University Press},
+  doi={10.1093/nar/gkx366}
 }
 
 @article{zhang2005tm,
@@ -124,7 +132,8 @@
   number={7},
   pages={2302--2309},
   year={2005},
-  publisher={Oxford University Press}
+  publisher={Oxford University Press},
+  doi={10.1093/nar/gki524}
 }
 
 @dataset{zhang_chengxin_2022_7215697,
@@ -144,5 +153,6 @@
   volume={99},
   pages={73--85},
   year={2019},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  doi={10.1016/j.future.2019.04.011}
 }
