--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -29,7 +29,8 @@
   number={1},
   pages={3168},
   year={2021},
-  publisher={Nature Publishing Group UK London}
+  publisher={Nature Publishing Group UK London},
+  doi={10.1038/s41467-021-23303-9}
 }
 
 @article{holm2022dali,
@@ -76,7 +77,8 @@
   number={4},
   pages={778--795},
   year={2009},
-  publisher={Wiley Online Library}
+  publisher={Wiley Online Library},
+  doi={10.1002/prot.22488},
 }
 
 @article{liebschner2019macromolecular,
@@ -87,7 +89,8 @@
   number={10},
   pages={861--877},
   year={2019},
-  publisher={International Union of Crystallography}
+  publisher={International Union of Crystallography},
+  doi={https://doi.org/10.1107/S2059798319011471}
 }
 
 @article{shindyalov1998protein,
